# onshape-to-robot

./: .gitignore  MANIFEST.in  Makefile  README-pypi.md  README.md  TODOs.md  app.py  big_bang.sh  bullet.py  clear-cache.sh  config.json.example  config.py  creds.json.example  csg.py  edit-shape.py  exportstl.py  import.py  load_robot.py  onshape-to-robot  onshape-to-robot-bullet  onshape-to-robot-clear-cache  onshape-to-robot-edit-shape  onshape-to-robot-pure-sketch  onshape-to-robot.py  pyproject.toml  requirements.txt  robot.py  robot_description.py  run-import.py  setup.py  simulation.py  stl_combine.py  urdf.py  urdf.rviz
apikey/: __init__.py  client.py  onshape.py
bullet/: control.py  quadruped.py  robot.urdf  sim.py
docs/: watch.sh
img/: design.xcf  shape-approx.xcf
onshape_api/: __init__.py  client.py  onshape.py
onshape_to_robot/: __init__.py  assembly.py  bullet.py  check_rate.py  clear_cache.py  cli.py  config.py  csg.py  edit_shape.py  export.py  exporter.py  exporter_mujoco.py  exporter_sdf.py  exporter_urdf.py  exporter_utils.py  expression.py  features.py  geometry.py  load_robot.py  main.py  message.py  mujoco.py  name_utils.py  onshape_to_robot.py  processor.py  processor_ball_to_euler.py  processor_collision_as_visual.py  processor_convert_to_cameras.py  processor_convex_decomposition.py  processor_dummy_base_link.py  processor_fixed_links.py  processor_merge_base_links.py  processor_merge_parts.py  processor_no_collision_meshes.py  processor_scad.py  processor_simplify_stls.py  processors.py  pure_sketch.py  robot.py  robot_builder.py  (+5 more)
(+49 files in other folders)
